Initial working nav bar.

--- a/index.html
+++ b/index.html
@@ -3,23 +3,48 @@
 <head>
 	<meata charset= "UTF-8">
 	<title>Homework</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
-	<div id="Header">
+<div class="nav-bar">
+
+	<div id="nav-header">
 		<header>
-		<p>Eunji Russ</p>
+			<p class="header-font">Eunji Russ</p>
 		</header>
+	</div>
 
-	<div class="container">
+	<nav>
+		<ul>
+			<li><a href="#">About</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+</div>
 
-		<nav>
-			<ul>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Portfolio</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		<nav>
+
+<div class="container">
+
+		
+		<div id="content">
+			<h1 class="header-font">About Me</h1>
+			<img src="#">
+			<p>First paragraph</p>
+			<p>second paragraph</p>
+		</div>
+
+		<div id="sidebar">
+			<a href="#"><img src="#">Github</a>
+			<a href="#"><img src="#">Linkedin</a>
+			<a href="#"><img src="#">StackOverflow</a>
+		</div>
+
+		<div id="footer">
+			<p>Copyright2017 EunjiRuss</p>
+		</div>
+</div>
+
 </body>
 </html>
