--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-	<meata charset= "UTF-8">
+	<meta charset= "UTF-8">
 	<title>Homework</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -18,8 +18,8 @@
 	<nav>
 		<ul>
 			<li><a href="#">About</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="portfolio.html" class="nav-borders-both">Portfolio</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 </div>
@@ -27,6 +27,11 @@
 
 <div class="container">
 
+		PORTFOLIO
+</div>
+
+<div class="footer">
+	<p>Copyright 2017 Eunji Russ</p>
 </div>
 
 </body>
