Fix up main site container bounds.

--- a/contact.html
+++ b/contact.html
@@ -7,32 +7,33 @@
 </head>
 <body>
 
-<div class="nav-bar">
-
-	<div id="nav-header">
-		<header>
-			<p class="header-font">Eunji Russ</p>
-		</header>
-	</div>
-
-	<nav>
-		<ul>
-			<li><a href="#">About</a></li>
-			<li><a href="portfolio.html" class="nav-borders-both">Portfolio</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
-</div>
-
-
 <div class="container">
 
-		
- CONTACT PAGE
-</div>
+	<div class="nav-bar">
 
-<div class="footer">
-	<p>Copyright 2017 Eunji Russ</p>
+		<div id="nav-header">
+			<header>
+				<p class="header-font">Eunji Russ</p>
+			</header>
+		</div>
+
+		<nav>
+			<ul>
+				<li><a href="index.html">About</a></li>
+				<li><a href="portfolio.html" class="nav-borders-both">Portfolio</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+	</div>
+
+
+		<div class="main-section">
+	 CONTACT PAGE
+	 	</div>
+
+	 <div class="footer">
+		<p>Copyright 2017 Eunji Russ</p>
+	</div>
 </div>
 
 </body>
