--- a/index.html
+++ b/index.html
@@ -7,46 +7,52 @@
 </head>
 <body>
 
-<div class="nav-bar">
 
-	<div id="nav-header">
-		<header>
-			<p class="header-font">Eunji Russ</p>
-		</header>
-	</div>
-
-	<nav>
-		<ul>
-			<li><a href="#">About</a></li>
-			<li><a href="portfolio.html" class="nav-borders-both">Portfolio</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
-</div>
 
 
 <div class="container">
 
-		
-		<div id="content">
-			<h1 class="header-font">About Me</h1>
-			<img src="#">
-			<p>First paragraph</p>
-			<p>second paragraph</p>
+	<div class="nav-bar">
+
+		<div id="nav-header">
+			<header>
+				<p class="header-font">Eunji Russ</p>
+			</header>
 		</div>
 
-		<div id="sidebar">
-			<a href="#"><img src="#">Github</a>
-			<a href="#"><img src="#">Linkedin</a>
-			<a href="#"><img src="#">StackOverflow</a>
-		</div>
+		<nav>
+			<ul>
+				<li><a href="index.html">About</a></li>
+				<li><a href="portfolio.html" class="nav-borders-both">Portfolio</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+	</div>
+
+	<div class="main-section">
+			
+			<div id="content">
+				<h1 class="header-font">About Me</h1>
+				<img src="#">
+				<p>First paragraph</p>
+				<p>second paragraph</p>
+			</div>
+
+			<div id="sidebar">
+				<a href="#"><img src="#">Github</a>
+				<a href="#"><img src="#">Linkedin</a>
+				<a href="#"><img src="#">StackOverflow</a>
+			</div>
+	</div>
+
+	<div class="footer">
+		<p>Copyright 2017 Eunji Russ</p>
+	</div>
 
 
 </div>
 
-<div class="footer">
-	<p>Copyright 2017 Eunji Russ</p>
-</div>
+
 
 </body>
 </html>
