--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 	<div class="main-section">
 			
 			<div id="content">
-				<h1 class="header-font">About Me</h1>
-				<img src="#">
-				<p>First paragraph</p>
-				<p>second paragraph</p>
+				<h1>About Me</h1>
+				<img class="profile-image" src="assets/images/profile.jpg" width="250px" height="200px">
+				<p class="p-about">first paragraph</p>
+				<p class="p-about">second paragraph</p>
 			</div>
 
 			<div id="sidebar">
