--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,17 @@
 
 
 		<div class="main-section">
-	 CONTACT PAGE
-	 	</div>
+
+			<div id="content">
+				<h1>Contact</h1>
+			</div>
+
+			<div id="sidebar">
+				<a href="#"><img src="#">Github</a>
+				<a href="#"><img src="#">Linkedin</a>
+				<a href="#"><img src="#">StackOverflow</a>
+			</div>
+		</div>
 
 	 <div class="footer">
 		<p>Copyright 2017 Eunji Russ</p>
