--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,16 @@
 
 
 		<div class="main-section">
-	 		portfolio
-	 	</div>
+	 		<div id="content">
+				<h1>Portfolio</h1>
+			</div>
+
+			<div id="sidebar">
+				<a href="#"><img src="#">Github</a>
+				<a href="#"><img src="#">Linkedin</a>
+				<a href="#"><img src="#">StackOverflow</a>
+			</div>
+		</div>
 
 	 <div class="footer">
 		<p>Copyright 2017 Eunji Russ</p>
