--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 			</div>
 
 			<div id="sidebar">
-				<a href="#"><img src="#">Github</a>
-				<a href="#"><img src="#">Linkedin</a>
-				<a href="#"><img src="#">StackOverflow</a>
+				<h2> Connect With Me</h2>
+				<a href="https://github.com/dashboard?privacy=PUBLIC"><img class="icons" src="assets/images/github.png"></a>
+				<a href="https://stackoverflow.com/users/8627879/eunjiruss"><img class="icons" src="assets/images/StackOverflow.png"></a>
+				<a href="https://www.linkedin.com/feed/"><img class="icons" src="assets/images/linkedin.png"></a>
 			</div>
 	</div>
 
