--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 			
 			<div id="content">
 				<h1>About Me</h1>
-				<img class="profile-image" src="assets/images/profile.jpg" width="250px" height="200px">
-				<p class="p-about">first paragraph</p>
-				<p class="p-about">second paragraph</p>
+				<img class="profile-image" src="assets/images/profile1.jpg" width="270px" height="320px">
+				<p class="p-about">I am an artist, working and living in Irvine, CA. I make multi-disciplinary work, which allows me to experiment with unusual materials and methods of art making. My focus lies on the simulacrum of nature that blurs the line between landscape and man-made landscape.  </p>
+				<p class="p-about">I hope to continue studying art and art theories so that I can work with those whom may be unfamiliar with such field; such as juvenile centers, prisons, mental institutions, and more.</p>
+				<p class="p-about">You can find more about my work<a href="https://eunjiruss.com">HERE!</a></p>
 			</div>
 
 			<div id="sidebar">
