--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,13 @@
 
 
 		<div class="main-section">
-
-			<div id="content">
+	 		<div id="content">
 				<h1>Contact</h1>
+					<form>
+						<p class="p-contact">Name</p><input class="contact" type="text" name="Name">
+						<p class="p-contact">Email</p><input class="contact" type="text" name="email">
+						<p class="p-contact">Message</p><textarea class="contact" name="message"></textarea>
+						<input class="button" type="button" value="Submit">
 			</div>
 
 			<div id="sidebar">
