--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 </head>
 <body>
 
-
-
-
 <div class="container">
 
 	<div class="nav-bar">
@@ -45,12 +42,16 @@
 				<a href="https://stackoverflow.com/users/8627879/eunjiruss"><img class="icons" src="assets/images/StackOverflow.png"></a>
 				<a href="https://www.linkedin.com/feed/"><img class="icons" src="assets/images/linkedin.png"></a>
 			</div>
+
 	</div>
 
 	<div class="footer">
 		<p>Copyright 2017 Eunji Russ</p>
 	</div>
-
+		<section id="contact">
+		<form name="html form" method="post" action="tosender.php">
+		<input type="text" name="first_name" placeholder="Name" required>
+		<input type="email" name="email" placeholder="">
 
 </div>
 
