--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,13 @@
 		<div class="main-section">
 	 		<div id="content">
 				<h1>Portfolio</h1>
+						<img class="port-img" src="assets/images/portfolio.jpg">
+						<img class="port-img" src="assets/images/portfolio_1.jpg">
+						<img class="port-img2" src="assets/images/portfolio_2.jpg">
+						<img class="port-img2" src="assets/images/profile.jpg">
+						
+
+
 			</div>
 
 			<div id="sidebar">
