--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,13 @@
 						<img class="port-img" src="assets/images/portfolio_1.jpg">
 						<img class="port-img2" src="assets/images/portfolio_2.jpg">
 						<img class="port-img2" src="assets/images/profile.jpg">
-						
-
-
 			</div>
+
+<!--I couldn't get the content names on the images. I think I could utilize the button input as one of the option, where the position of the button is absolute. All buttons should be same in its size, text color (white), background color (teal), margins/width and any other values that may be needed. The names of each button should differ accordingly. 
+
+Another optioon would be to use the span or wrapping, which allows a text to be put on an image. When all images have this, then I would link each images to the apporiate url. So the function of opening a new tab or window would be linked to the image whereas it would be on the button on the first option.
+
+I think a third, and perhaps the easiest way for me, could be to make an image that already has title or name on top with the help of photoshop or paint. Then I would apply different links for each images, which already has names on top. -->
 
 			<div id="sidebar">
 				<h2> Connect With Me</h2>
